3. Денежные переводы AccountStorage